force-app/main/default/objects/Marketing_Concierge__c/Marketing_Concierge__c.object-meta.xml
<CustomObject>
    <label>Marketing Concierge</label>
    <nameField>
        <displayFormat>MC-{0000}</displayFormat>
        <label>Marketing Concierge</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Marketing Concierges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>