force-app/main/default/objects/Marketing_Concierge__c/fields/Event_Activity_type__c.field-meta.xml
<CustomField>
    <fullName>Event_Activity_type__c</fullName>
    <formula>TEXT( Specify_Marketing_Request__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event/Activity type</label>
    <type>Text</type>
</CustomField>