force-app/main/default/objects/Marketing_Concierge__c/fields/Is_this_a_new_project_or_update_existing__c.field-meta.xml
<CustomField>
    <fullName>Is_this_a_new_project_or_update_existing__c</fullName>
    <label>Is this a new project or update existing</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>APPROVAL for your previously created collateral</fullName>
            </value>
            <value>
                <fullName>New Project Request</fullName>
            </value>
            <value>
                <fullName>Update an existing document</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>