force-app/main/default/objects/Marketing_Concierge__c/fields/Partner_Company__c.field-meta.xml
<CustomField>
    <fullName>Partner_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Marketing Concierges (Partner Company)</relationshipLabel>
    <relationshipName>Marketing_Concierges2</relationshipName>
    <type>Lookup</type>
</CustomField>