force-app/main/default/objects/Marketing_Concierge__c/fields/Partner_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Partner_Email_Address__c</fullName>
    <label>Partner Email Address</label>
    <type>Email</type>
</CustomField>