force-app/main/default/objects/Marketing_Concierge__c/fields/Request_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Request_Due_Date__c</fullName>
    <label>Request Due Date</label>
    <type>Date</type>
</CustomField>