force-app/main/default/objects/Marketing_Concierge__c/fields/Update_or_Revision__c.field-meta.xml
<CustomField>
    <fullName>Update_or_Revision__c</fullName>
    <inlineHelpText>If this is a revision to existing request, please go to the existing/original request number and submit your changes.</inlineHelpText>
    <label>Update or Revision?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>