force-app/main/default/objects/Marketing_Concierge__c/fields/What_are_the_specs__c.field-meta.xml
<CustomField>
    <fullName>What_are_the_specs__c</fullName>
    <inlineHelpText>size, color, etc.</inlineHelpText>
    <label>What are the specs?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>