force-app/main/default/objects/Marketing_Concierge__c/fields/Where_and_how_will_this_be_used__c.field-meta.xml
<CustomField>
    <fullName>Where_and_how_will_this_be_used__c</fullName>
    <inlineHelpText>e.g., online, print, both, etc.</inlineHelpText>
    <label>Where and how will this be used?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On-Line</fullName>
            </value>
            <value>
                <fullName>Print</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>