force-app/main/default/objects/Marketing_Concierge__c/fields/Who_are_we_talking_to__c.field-meta.xml
<CustomField>
    <fullName>Who_are_we_talking_to__c</fullName>
    <label>Who are we talking to?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>