force-app/main/default/objects/Marketing_Concierge__c/validationRules/Text_Box_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Text_Box_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Where_and_how_will_this_be_used__c , &apos;Other&apos;)&amp;&amp; ISBLANK( Additional_Information_If_opted_other__c )</errorConditionFormula>
    <errorDisplayField>Additional_Information_If_opted_other__c</errorDisplayField>
    <errorMessage>Please specify the information</errorMessage>
</ValidationRule>