force-app/main/default/objects/Marketing_Concierge__c/validationRules/Update_or_Revision_Validation_2.validationRule-meta.xml
<ValidationRule>
    <fullName>Update_or_Revision_Validation_2</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(  Update_or_Revision__c ,&quot;Yes&quot;)</errorConditionFormula>
    <errorDisplayField>Update_or_Revision__c</errorDisplayField>
    <errorMessage>Please go to the existing/original request number and submit your changes.</errorMessage>
</ValidationRule>