force-app/main/default/objects/Marketing_Concierge__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Partner_Company__c</columns>
    <columns>Event_Activity_type__c</columns>
    <columns>Created_Date__c</columns>
    <columns>Request_Due_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>