force-app/main/default/objects/Marketing_Concierge__c/listViews/Marketing_Concierge_Queue_Marketing_Concierge.listView-meta.xml
<ListView>
    <fullName>Marketing_Concierge_Queue_Marketing_Concierge</fullName>
    <filterScope>Queue</filterScope>
    <label>Marketing Concierge Queue</label>
    <queue>Marketing_Concierge_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>